--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,10 @@ button:hover {
   color: #fff;
 }
 
+li {
+  margin-top: 8px;
+}
+
 .input-area {
   background-color: #c1ffff;
   width: 400px;
@@ -31,7 +35,7 @@ button:hover {
   border-radius: 8px;
 }
 
-.imcomplete-area {
+.incomplete-area {
   background-color: #c6ffe2;
   width: 400px;
   min-height: 200px;
